# wearable_ui

./: README.md  index.html  open_ui.sh  open_voice_control.sh  server.js
ros2_ws/src/stream_data/: CMakeLists.txt  package.xml
ros2_ws/src/stream_data/launch/: stream_data.launch.py
ros2_ws/src/stream_data/src/: stream_data.cpp
